Added support to search stores
