# myproject-api/src/main/java/net/andresbustamante/myproject/api/model/StoreDto.java
@@ -1,0 +1,14 @@
+package net.andresbustamante.myproject.api.model;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class StoreDto {
+
+    private Short id;
+    private String name;
+    private StaffDto manager;
+    private AddressDto address;
+}
